--- a/doing_more_with_dbt/dbt_project.yml
+++ b/doing_more_with_dbt/dbt_project.yml
@@ -32,5 +32,11 @@ clean-targets:         # directories to be removed by `dbt clean`
 # as tables. These settings can be overridden in the individual model files
 # using the `{{ config(...) }}` macro.
 models:
-  +materialized: table 
-  
+  jaffle_shop:
+    # Config indicated by + and applies to all files under models/example/
+    marts:
+      core: 
+        +materialized: table
+    staging:
+      +materialized: view
+
